# haskell-invertible-syntax-attoparsec

./: invertible-syntax-attoparsec.cabal
Text/Syntax/Check/Attoparsec/: ByteString.hs  Text.hs
Text/Syntax/Parser/: Attoparsec.hs  AttoparsecZepto.hs
Text/Syntax/Parser/Attoparsec/: ByteString.hs  Text.hs  Zepto.hs
Text/Syntax/Printer/: ByteString.hs  Text.hs
debian/: changelog  control  rules
example/: BinTerm.hs  bytestring.hs  bytestringLazy.hs  text.hs  textLazy.hs
