name:                invertible-syntax-attoparsec
version:             0.1.0.0
synopsis:            Turn attoparsec Parser types into instance of invertible-syntax-poly.
description:         Turn attoparsec Parser types into instance of invertible-syntax-poly.
homepage:            http://twitter.com/khibino
license:             BSD3
license-file:        LICENSE
author:              Kei Hibino <ex8k.hibino@gmail.com>
maintainer:          Kei Hibino <ex8k.hibino@gmail.com>
category:            Text
stability:           experimental
build-type:          Simple
cabal-version:       >=1.6

library
  --hs-source-dirs:       src
  exposed-modules:
                        Text.Syntax.Parser.Attoparsec
                        Text.Syntax.Parser.AttoparsecZepto
                        Text.Syntax.Printer.ByteString
                        -- Text.Syntax.Parser.Attoparsec.Check

  build-depends:        base < 5
                      , bytestring
                      , text
                      , attoparsec >= 0.10
                      , partial-isomorphisms
                      , invertible-syntax-poly

source-repository head
  type:     git
  location: https://github.com/khibino/haskell-invertible-syntax-attoparsec

source-repository head
  type:     mercurial
  location: https://bitbucket.org/khibino/haskell-invertible-syntax-attoparsec
